--- a/package.json
+++ b/package.json
@@ -1,5 +1,28 @@
 {
   "dependencies": {
-    "dotenv": "^16.4.7"
-  }
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "nodemailer": "^6.10.0"
+  },
+  "name": "waiphatech-portfolio",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Phali003/my_Portfolio.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Phali003/my_Portfolio/issues"
+  },
+  "homepage": "https://github.com/Phali003/my_Portfolio#readme",
+  "description": ""
 }
